--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h2 {
 
 img {
     transform: translateX(0px);
-    animation: float 6s ease-out infinite;
+    animation: float 6s ease-in-out infinite;
 }
 
 @keyframes float {
